--- a/src/components/Artwork/Artwork.module.css
+++ b/src/components/Artwork/Artwork.module.css
@@ -21,30 +21,26 @@
 }
 
 .container_artwork {
-  display: flex;
-  flex-direction: column;
   position: relative;
+
+  display: grid;
+  grid-template-columns: auto auto;
 }
 
 .bold {
   font-weight: bold;
 }
 
-.row {
+.grid_item {
   flex: 1;
   width: 100%;
   margin: 2% 0;
-}
-
-.floatLeft {
-  float: left;
-}
-.floatRight {
-  float: right;
+  padding: 2%;
 }
 
 .painting {
-  max-width: 50%;
+  max-width: 100%;
+  max-height: 375px;
 }
 .textBox {
   padding: 5%;
@@ -60,13 +56,7 @@
 }
 
 @media (max-width: 640px) {
-  .painting {
-    max-width: 100%;
-  }
-  .floatLeft {
-    float: none;
-  }
-  .floatRight {
-    float: none;
+  .container_artwork {
+    grid-template-columns: auto;
   }
 }
