--- a/src/components/Cakes/CakeImg/CakeImg.module.css
+++ b/src/components/Cakes/CakeImg/CakeImg.module.css
@@ -1,5 +1,12 @@
 .cakeImg {
-  max-width: 100%;
-  margin: 20px 0;
   border-radius: 5px;
+  max-width: 200px;
+  margin: 20px;
+}
+
+@media (max-width: 640px) {
+  .cakeImg {
+    max-width: 100px;
+    margin: 5px;
+  }
 }
