--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,43 +1,95 @@
 .navBar {
-  background-color: #cacaca;
+  background-color: #82828261;
   margin-bottom: 4em;
   padding: 1em;
   min-height: 2em;
   position: relative;
-  display: flex;
-  flex-direction: row;
+  height: 53px;
 }
+
 .floralRing {
   width: 120px;
   position: absolute;
-  top: -50%;
+
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  padding: 10px;
+
   background: #fff;
   border-radius: 100%;
-  padding: 10px;
+
+  z-index: 10;
 }
-.menuLine {
+
+.navMenuToggle {
   height: 25px;
   margin-left: auto;
   margin-right: 2em;
+  display: none;
 }
 
-.navBar ul {
-  list-style-type: none;
+.navMenu {
+  position: relative;
   display: flex;
-  margin-left: auto;
+  justify-content: right;
 
+  overflow: hidden;
+
+  padding: 0;
+  margin-left: auto;
   margin-right: calc(-1 * (100vw - 100%) + 4em);
+
+  transition: height 0.5s ease, padding 1s ease;
+
+  list-style-type: none;
+  background-color: #cccccc;
+  border-radius: 0 0 5px 5px;
 }
-.navBar ul li {
+.menuItem {
   margin: 0 5px;
 }
-.navbarLink {
+.navLink {
   color: black;
   font-family: var(--inter-font);
-  font-size: 18px;
+  font-size: 125%;
 }
 
 .active {
   color: #911d4f;
-  border-top: 1px solid #911d4f;
+}
+.noHeight {
+  height: 0;
+}
+.fixedHeight {
+  height: 210px;
+  padding: 10px;
+  padding-left: 20px;
+  padding-top: 20px;
+}
+
+@media (max-width: 640px) {
+  .navBar {
+    margin-bottom: 2em;
+  }
+
+  .navMenuToggle {
+    display: block;
+  }
+
+  .navMenu {
+    flex-direction: column;
+
+    z-index: 10;
+
+    margin-left: auto;
+    max-width: max-content;
+
+    margin-right: calc(-1 * (100vw - 100%));
+  }
+
+  .menuItem {
+    margin: 10px 5px;
+    margin-right: 30px;
+  }
 }
