--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -24,7 +24,6 @@
   width: 200px;
   height: auto;
   margin: auto;
-  /* border-radius: 50px 20px 5px 5px; */
   border-radius: 50px 40px 45px 100px;
   margin-bottom: 0;
   margin-left: -65%;
@@ -49,4 +48,10 @@
   margin-top: 10px;
   font-size: 18px;
   color: black;
+}
+
+@media (max-width: 640px) {
+  .container_100vh {
+    margin-top: 4em;
+  }
 }
